removes support for datasetUrn from new policy creation. changes find by username to search by full name. fixes issues with null properties on compliance policy. add styling to reduce visibility of semi-hidden select

--- a/wherehows-web/app/styles/components/nacho/_nacho-select.scss
+++ b/wherehows-web/app/styles/components/nacho/_nacho-select.scss
@@ -53,6 +53,7 @@ $default-border: (1px solid shade($color, 20%));
   /// Hides the styling for a select element unless hovered over
   &--hidden-state {
     border: 1px solid transparent;
+    background-color: transparent;
 
     &:hover {
       border: $default-border;
